--- a/client/src/features/home/home.html
+++ b/client/src/features/home/home.html
@@ -17,8 +17,8 @@
     </div>
 
     }@else {
-    <div class="text-2xl text-center flex justify-center">
-        Register form goes here
+    <div class="w-full text-2xl text-center flex justify-center">
+        <app-register class="w-full"/>
     </div>
     }
 
