--- a/client/src/features/home/home.html
+++ b/client/src/features/home/home.html
@@ -18,7 +18,7 @@
 
     }@else {
     <div class="w-full text-2xl text-center flex justify-center">
-        <app-register [memberFromHome]="membersFromApp" class="w-full" (cancelRegister)="showRegister($event)" />
+        <app-register class="w-full"  (cancelRegister)="showRegister($event)" />
     </div>
     }
 
